# haskell-postgresql-notify-listen

./: .envrc  .gitignore  docker-compose.yml  flake.nix  justfile  pubsub.cabal
db/: add_pubsub_notify.sql
src/: Pubsub.hs  PubsubSkipLocked.hs
src/Pubsub/: PubsubModels.hs
